Kubernetes/Azure/todoapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
        - name: todoapi
          image: ghcr.io/brandencward/todoapi:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            name: web
            protocol: TCP
          readinessProbe:
            httpGet:
              port: web
              path: /swagger
          volumeMounts:
          - name: testread
            mountPath: /mnt/tests/test.txt  
            subPath: test.txt          
            readOnly: true
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
      volumes:
      - name: testread
        configMap:
          name: testreadfile
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv"
