Kubernetes/Azure/todoapi_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: todoapi
  ports:
    - name: web
      port: 80
      targetPort: web
