Kubernetes/Azure/kluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    -
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: todoapi
                port:
                  number: 80
            path: /
